# systray_microphone

./: .gitignore  CMakeLists.txt  README.md  card_info.cpp  card_info.h  card_profile_info.cpp  card_profile_info.h  window.cpp
